# gitwise

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  VERSIONING.md  another_test_file.md  cli.py  conventional_demo.md  cursor_run_project_and_fix_bugs.md  debug_provider.py  debug_router.py  gemini_success.md  gitutils.py  individual_test.txt  llm.py  pyproject.toml  requirements.txt  setup.py  task-ollama.md  test_auth.py  test_auth_fix.py  test_auth_tests.py  test_commit_rules_demo.py  test_config.py  test_feature.md  test_file.txt  test_file2.txt  test_file_info.txt  test_fix_complete.py  test_gemini_working.md  test_group1.txt  test_logging.txt  test_merge.md  test_middleware.py  test_openrouter.py  test_openrouter_fixed.py  test_push_flow.py  test_push_prompt.txt  test_ui_components.py
.cursor/rules/: meta-level.mdc
.github/workflows/: ci.yml
.gitwise/: config.json
demo/: commit-comparison.tape  merge-comparison.tape
docs/: Gemfile  QUICK_REFERENCE.md  _config.yml  api.md  changelog.md  context.md  features.md  index.md  quick-start.md
features/: commit.py  pr.py
gitwise/: __init__.py  cli.py  config.py  gitutils.py  llm.py  prompts.py
gitwise/cli/: __init__.py  add.py  init.py  merge.py  pr_config.py
gitwise/core/: __init__.py  git.py  git_manager.py
gitwise/features/: add.py  changelog.py  (+7 more)
test_dir/: file1.txt  file2.txt
tests/: test_add_feature.py  test_changelog.py  test_cli.py  test_commit.py  test_config.py  test_dependency_installation.py  test_git_manager.py  test_llm.py  test_pr.py  test_pr_rules.py  test_push_feature.py
(+25 files in other folders)
